# Highcall-Library

./: Highcall Library.sln
Current/: Current.vcxproj  Current.vcxproj.filters
Current/private/kernel/: drive.c  firmware.c  inject.c  string.c  unique_id.c  virtual.c
Current/private/sys/: version_table_86.h  version_table_86_64.h  version_table_ntuser_86.h  version_table_ntuser_86_64.h
Current/public/: base.h  native.h
Rust/: Cargo.toml  build.rs
Rust/src/: lib.rs
VersionTableGen/: Program.cs
