[package]
name = "highcall-library"
version = "0.1.0"
authors = ["Konrad"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
#cc = { version = "1.0", features = ["parallel"] }
#glob = "0.3.0"
vswhere = { git = "https://github.com/slonopotamus/vswhere-rs", branch = "optional-fields" }
bindgen = "0.54.1"

[dependencies]
